Android: don't add all the Service meta-data for Qt 6.2+

These values were removed in Qt 6.2, don't add them in that case.

Fixes: QTCREATORBUG-27088
Change-Id: I5560b18c0a849f7382b498097923ba425e47c40a
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>